<resources>
    <string name="app_name">ParkGo</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="text_login">Login</string>
    <string name="text_register">Register</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>

    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>

    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>


    <string-array name="dropCostandTime">
        <item>20min / £1</item>
        <item>1hr / £2</item>
        <item>2hr / £4</item>
        <item>3hr / £6</item>
    </string-array>

    <string name="btntxtPay">Pay</string>
    <string name="txtvehiclereg">Vehicle Registration</string>
    <string name="txtCode">Enter 4 Digit Code</string>
    <string name="txtStreet">Street Name</string>


    <string name="hint_cardnum">Card Number</string>
    <string name="hint_expirydate">Expiry Date</string>
    <string name="hint_securtiycode">Security Code</string>
    <string name="Confirm_Paydets">Confirm</string>

    <string name="error_message_cardnum">Enter card Number</string>
    <string name="error_message_exiprydate">Enter expiry Date</string>
    <string name="error_message_securitycode"> Enter security Code</string>

    <string name="txbtnlogout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


</resources>
