<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_area"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dhillon.parkandgo.activities.UserAreaActivity">

    <Button
        android:text="@string/btntxtPay"
        android:background="@color/colorTextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPay"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/txtCode"
        android:maxLength="4"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtCode"
        android:layout_above="@+id/txtStreetName"
        android:layout_alignLeft="@+id/txtStreetName"
        android:layout_alignStart="@+id/txtStreetName" />

    <EditText
        android:hint= "@string/txtStreet"
        android:maxLength="30"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/txtStreetName"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_above="@+id/cbGPS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="GPS Location"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbGPS"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/btnPay"
        android:layout_alignLeft="@+id/txtStreetName"
        android:layout_alignStart="@+id/txtStreetName" />

    <EditText
        android:id="@+id/txtReg"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/txtvehiclereg"
        android:layout_above="@+id/txtCode"
        android:layout_alignLeft="@+id/txtCode"
        android:layout_alignStart="@+id/txtCode" />

    <Spinner
        android:id="@+id/dlCostTime"
        android:entries="@array/dropCostandTime"
        android:popupBackground="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtReg"
        android:layout_alignLeft="@+id/txtReg"
        android:layout_alignStart="@+id/txtReg"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/txtReg"
        android:layout_alignEnd="@+id/txtReg" />

    <android.widget.TextView
        android:id="@+id/tvInvisibleError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignRight="@+id/dlCostTime"
        android:layout_alignBottom="@+id/dlCostTime"
        android:layout_marginTop="0dp"
        android:paddingTop="0dp"
        android:paddingRight="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/parklogo"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/dlCostTime"
        android:layout_alignStart="@+id/dlCostTime"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_above="@+id/dlCostTime" />


</RelativeLayout>


